--- a/package.json
+++ b/package.json
@@ -3,17 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@hookform/resolvers": "^0.1.0",
+    "@reduxjs/toolkit": "^1.4.0",
+    "aws-sdk": "^2.742.0",
+    "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.7.0",
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "reactstrap": "^8.5.1",
+    "typescript": "~3.7.2",
+    "yup": "^0.29.3"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^10.4.9",
+    "@types/classnames": "^2.2.10",
+    "@types/invariant": "^2.2.33",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.2",
+    "@types/react": "^16.9.48",
+    "@types/react-datepicker": "^3.1.1",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/reactstrap": "^8.5.1",
+    "@types/yup": "^0.29.6"
   },
   "scripts": {
     "start": "react-scripts start",
