--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "@hookform/resolvers": "^0.1.0",
     "@reduxjs/toolkit": "^1.4.0",
     "aws-sdk": "^2.742.0",
+    "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.0",
     "react-icons": "^3.11.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "reactstrap": "^8.5.1",
-    "typescript": "~3.7.2",
     "yup": "^0.29.3"
   },
   "devDependencies": {
@@ -27,9 +28,11 @@
     "@types/react": "^16.9.48",
     "@types/react-datepicker": "^3.1.1",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/reactstrap": "^8.5.1",
-    "@types/yup": "^0.29.6"
+    "@types/yup": "^0.29.6",
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
