--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "reactstrap": "^8.5.1",
+    "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/reactstrap": "^8.5.1",
+    "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.6",
     "typescript": "^4.0.2"
   },
