--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/reactstrap": "^8.5.1",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.6",
+    "@welldone-software/why-did-you-render": "^5.0.0-alpha.2",
     "typescript": "^4.0.2"
   },
   "scripts": {
