--- a/package.json
+++ b/package.json
@@ -3,45 +3,50 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookform/resolvers": "^0.1.1",
+    "@hookform/resolvers": "^1.0.0",
     "@reduxjs/toolkit": "^1.4.0",
-    "aws-sdk": "^2.778.0",
+    "aws-sdk": "^2.783.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-hook-form": "^6.9.6",
+    "firebase": "^8.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^6.10.0",
     "react-icons": "^3.11.0",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "reactstrap": "^8.6.0",
+    "reactstrap": "^8.7.0",
     "uuid": "^8.3.1",
     "yup": "^0.29.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
-    "@types/classnames": "^2.2.10",
+    "@types/classnames": "^2.2.11",
     "@types/invariant": "^2.2.34",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.3",
-    "@types/react": "^16.9.53",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.55",
     "@types/react-datepicker": "^3.1.1",
-    "@types/react-dom": "^16.9.8",
+    "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/reactstrap": "^8.5.2",
     "@types/uuid": "^8.3.0",
-    "@types/yup": "^0.29.8",
+    "@types/yup": "^0.29.9",
     "@welldone-software/why-did-you-render": "^5.0.0",
-    "typescript": "^4.0.3"
+    "firebase-admin": "^9.3.0",
+    "firebase-tools": "^8.14.1",
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "firebase": "firebase",
+    "upload": "node migrate/upload.js"
   },
   "eslintConfig": {
     "extends": "react-app"
