--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^8.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-firebase-hooks": "^2.2.0",
     "react-hook-form": "^6.10.0",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.2",
