--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "reactstrap": "^8.7.0",
+    "slugify": "^1.4.6",
     "uuid": "^8.3.1",
     "yup": "^0.29.3"
   },
