--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
     "firebase": "^8.0.0",
+    "invariant": "^2.2.4",
     "react": "^17.0.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^2.2.0",
     "react-hook-form": "^6.10.0",
@@ -34,7 +36,7 @@
     "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
-    "@types/reactstrap": "^8.5.2",
+    "@types/reactstrap": "^8.5.3",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.9",
     "@welldone-software/why-did-you-render": "^5.0.0",
