--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.2.6",
     "firebase": "^8.0.0",
     "invariant": "^2.2.4",
+    "memoize-one": "^5.1.1",
     "react": "^17.0.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
