--- a/package.json
+++ b/package.json
@@ -3,39 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookform/resolvers": "^1.1.1",
+    "@hookform/resolvers": "^1.1.2",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
-    "firebase": "^8.1.2",
+    "firebase": "^8.2.0",
     "memoize-one": "^5.1.1",
     "react": "^17.0.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^2.2.0",
-    "react-hook-form": "^6.12.2",
+    "react-hook-form": "^6.13.0",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.7.1",
     "slugify": "^1.4.6",
-    "uuid": "^8.3.1",
-    "yup": "^0.32.1"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@types/classnames": "^2.2.11",
-    "@types/jest": "^26.0.16",
-    "@types/node": "^14.14.10",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
     "@types/react-datepicker": "^3.1.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
     "@types/reactstrap": "^8.7.2",
     "@types/uuid": "^8.3.0",
-    "firebase-admin": "^9.4.1",
-    "firebase-tools": "^8.17.0",
-    "typescript": "^4.1.2"
+    "firebase-admin": "^9.4.2",
+    "firebase-tools": "^8.19.0",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,7 +43,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "firebase": "firebase",
-    "upload": "node migrate/upload.js"
+    "upload": "node migrate/upload.js",
+    "pack": "cd ~/react-firebase-hooks && npm pack",
+    "loadLocal": "npm r react-firebase-hooks && npm run pack && npm i ~/react-firebase-hooks/react-firebase-hooks-2.2.0.tgz",
+    "loadRemote": "npm r react-firebase-hooks && npm i react-firebase-hooks"
   },
   "eslintConfig": {
     "extends": "react-app"
