--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^17.0.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
-    "react-firebase-hooks": "^2.2.0",
+    "react-firebase-hooks": "file:../react-firebase-hooks/react-firebase-hooks-2.2.0.tgz",
     "react-hook-form": "^6.13.0",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
