--- a/package.json
+++ b/package.json
@@ -3,39 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookform/resolvers": "^1.1.2",
-    "bootstrap": "^4.5.3",
+    "@hookform/resolvers": "^1.3.4",
+    "@satyam/react-form": "file:../my-react-form",
+    "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
-    "firebase": "^8.2.0",
+    "firebase": "^8.2.7",
     "memoize-one": "^5.1.1",
     "react": "^17.0.1",
-    "react-datepicker": "^3.3.0",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "file:../react-firebase-hooks/react-firebase-hooks-2.2.0.tgz",
-    "react-hook-form": "^6.13.0",
-    "react-icons": "^4.1.0",
+    "react-hook-form": "^6.15.1",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "reactstrap": "^8.7.1",
+    "reactstrap": "^8.9.0",
     "slugify": "^1.4.6",
     "uuid": "^8.3.2",
     "yup": "^0.32.8"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@types/classnames": "^2.2.11",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.12",
-    "@types/react": "^17.0.0",
-    "@types/react-datepicker": "^3.1.2",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.28",
+    "@types/react": "^17.0.2",
+    "@types/react-datepicker": "^3.1.3",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-router-dom": "^5.1.7",
     "@types/reactstrap": "^8.7.2",
     "@types/uuid": "^8.3.0",
-    "firebase-admin": "^9.4.2",
-    "firebase-tools": "^8.19.0",
-    "typescript": "^4.1.3"
+    "firebase-admin": "^9.5.0",
+    "firebase-tools": "^8.20.0",
+    "typescript": "^4.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
