--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^1.3.4",
-    "@satyam/react-form": "file:../my-react-form",
+    "@satyam/react-form": "file:../my-react-form/satyam-react-form-1.0.0.tgz",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
-    "firebase": "^8.2.7",
+    "firebase": "^8.2.9",
     "memoize-one": "^5.1.1",
     "react": "^17.0.1",
-    "react-datepicker": "^3.5.0",
+    "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "file:../react-firebase-hooks/react-firebase-hooks-2.2.0.tgz",
-    "react-hook-form": "^6.15.1",
+    "react-hook-form": "^6.15.4",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
-    "slugify": "^1.4.6",
+    "slugify": "^1.4.7",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
@@ -27,16 +27,16 @@
     "@testing-library/react": "^11.2.5",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.28",
+    "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
-    "@types/react-datepicker": "^3.1.3",
+    "@types/react-datepicker": "^3.1.5",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
     "@types/reactstrap": "^8.7.2",
     "@types/uuid": "^8.3.0",
     "firebase-admin": "^9.5.0",
-    "firebase-tools": "^9.4.0",
-    "typescript": "^4.1.5"
+    "firebase-tools": "^9.5.0",
+    "typescript": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
