--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^1.3.4",
-    "@satyam/react-form": "file:../my-react-form/satyam-react-form-1.0.0.tgz",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "firebase": "^8.2.9",
+    "locale-currency": "^0.0.2",
     "memoize-one": "^5.1.1",
     "react": "^17.0.1",
     "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.1",
-    "react-firebase-hooks": "file:../react-firebase-hooks/react-firebase-hooks-2.2.0.tgz",
+    "react-firebase-hooks": "^3.0.1",
     "react-hook-form": "^6.15.4",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
