--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ lacorazon-d66fd-firebase-adminsdk-thy14-92e97d72c9.json
 firebase.config.js
 /.firebase
 migrate/*.json
+/dist
 
 # new since CRA 4.0.0
 .eslintcache
