--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bit/satyam.components.icons-and-buttons": "^1.0.0",
+    "@bit/satyam.components.intl-provider": "^1.0.0",
     "@hookform/resolvers": "^1.3.4",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
@@ -63,5 +65,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "bit": {
+    "env": {
+      "compiler": "bit.envs/compilers/react-typescript@4.0.0"
+    },
+    "componentsDefaultDirectory": "components/{name}",
+    "packageManager": "npm"
   }
 }
