--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@bit/satyam.components.icons-and-buttons": "^1.0.0",
-    "@bit/satyam.components.intl-provider": "^1.0.0",
     "@hookform/resolvers": "^1.3.4",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
@@ -68,7 +66,8 @@
   },
   "bit": {
     "env": {
-      "compiler": "bit.envs/compilers/react-typescript@4.0.0"
+      "compiler": "bit.envs/compilers/react-typescript@4.0.0",
+      "tester": "bit.envs/testers/jest@22.4.3"
     },
     "componentsDefaultDirectory": "components/{name}",
     "packageManager": "npm"
